tests/snapshots/opendbc/comma_body.snap
---
source: tests/snapshots.rs
---
version: 0.0.02
bit_timing: ~
messages:
  - id:
      Standard: 513
    name: MOTORS_DATA
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: SPEED_L
        multiplexer_indicator: Plain
        start_bit: 7
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -1000
        max: 1000
        unit: ""
        receivers:
          - XXX
      - name: SPEED_R
        multiplexer_indicator: Plain
        start_bit: 23
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -1000
        max: 1000
        unit: ""
        receivers:
          - XXX
      - name: ELEC_ANGLE_L
        multiplexer_indicator: Plain
        start_bit: 39
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 0
        unit: deprecated
        receivers:
          - XXX
      - name: ELEC_ANGLE_R
        multiplexer_indicator: Plain
        start_bit: 47
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 0
        unit: deprecated
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 51
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 63
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 514
    name: VAR_VALUES
    size: 3
    transmitter:
      NodeName: XXX
    signals:
      - name: IGNITION
        multiplexer_indicator: Plain
        start_bit: 0
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: ENABLE_MOTORS
        multiplexer_indicator: Plain
        start_bit: 1
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: FAULT
        multiplexer_indicator: Plain
        start_bit: 7
        size: 6
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 63
        unit: ""
        receivers:
          - XXX
      - name: MOTOR_ERR_L
        multiplexer_indicator: Plain
        start_bit: 15
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: MOTOR_ERR_R
        multiplexer_indicator: Plain
        start_bit: 23
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 515
    name: BODY_DATA
    size: 4
    transmitter:
      NodeName: XXX
    signals:
      - name: MCU_TEMP
        multiplexer_indicator: Plain
        start_bit: 7
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 0.1
        offset: 0
        min: 0
        max: 125
        unit: ""
        receivers:
          - XXX
      - name: BATT_VOLTAGE
        multiplexer_indicator: Plain
        start_bit: 15
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 0.01
        offset: 0
        min: 0
        max: 60
        unit: ""
        receivers:
          - XXX
      - name: BATT_PERCENTAGE
        multiplexer_indicator: Plain
        start_bit: 31
        size: 7
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 100
        unit: ""
        receivers:
          - XXX
      - name: CHARGER_CONNECTED
        multiplexer_indicator: Plain
        start_bit: 24
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 516
    name: MOTORS_CURRENT
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: LEFT_PHA_AB
        multiplexer_indicator: Plain
        start_bit: 7
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -32768
        max: 32767
        unit: ""
        receivers:
          - XXX
      - name: LEFT_PHA_BC
        multiplexer_indicator: Plain
        start_bit: 23
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -32768
        max: 32767
        unit: ""
        receivers:
          - XXX
      - name: RIGHT_PHA_AB
        multiplexer_indicator: Plain
        start_bit: 39
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -32768
        max: 32767
        unit: ""
        receivers:
          - XXX
      - name: RIGHT_PHA_BC
        multiplexer_indicator: Plain
        start_bit: 55
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -32768
        max: 32767
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 517
    name: MOTORS_ANGLE
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: LEFT_ANGLE_SENSOR
        multiplexer_indicator: Plain
        start_bit: 7
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 16384
        unit: ""
        receivers:
          - XXX
      - name: RIGHT_ANGLE_SENSOR
        multiplexer_indicator: Plain
        start_bit: 23
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 16384
        unit: ""
        receivers:
          - XXX
      - name: LEFT_HALL_SENSOR
        multiplexer_indicator: Plain
        start_bit: 39
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 360
        unit: ""
        receivers:
          - XXX
      - name: RIGHT_HALL_SENSOR
        multiplexer_indicator: Plain
        start_bit: 55
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 360
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 592
    name: TORQUE_CMD
    size: 6
    transmitter:
      NodeName: XXX
    signals:
      - name: TORQUE_L
        multiplexer_indicator: Plain
        start_bit: 7
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -1000
        max: 1000
        unit: ""
        receivers:
          - XXX
      - name: TORQUE_R
        multiplexer_indicator: Plain
        start_bit: 23
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -1000
        max: 1000
        unit: ""
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 35
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 47
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 593
    name: MAX_MOTOR_RPM_CMD
    size: 5
    transmitter:
      NodeName: XXX
    signals:
      - name: MAX_RPM_L
        multiplexer_indicator: Plain
        start_bit: 7
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1000
        unit: ""
        receivers:
          - XXX
      - name: MAX_RPM_R
        multiplexer_indicator: Plain
        start_bit: 23
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1000
        unit: ""
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 39
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 769
    name: KNEE_MOTORS_DATA
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: SPEED_L
        multiplexer_indicator: Plain
        start_bit: 7
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -1000
        max: 1000
        unit: ""
        receivers:
          - XXX
      - name: SPEED_R
        multiplexer_indicator: Plain
        start_bit: 23
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -1000
        max: 1000
        unit: ""
        receivers:
          - XXX
      - name: ELEC_ANGLE_L
        multiplexer_indicator: Plain
        start_bit: 39
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 0
        unit: deprecated
        receivers:
          - XXX
      - name: ELEC_ANGLE_R
        multiplexer_indicator: Plain
        start_bit: 47
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 0
        unit: deprecated
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 51
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 63
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 770
    name: KNEE_VAR_VALUES
    size: 3
    transmitter:
      NodeName: XXX
    signals:
      - name: IGNITION
        multiplexer_indicator: Plain
        start_bit: 0
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: ENABLE_MOTORS
        multiplexer_indicator: Plain
        start_bit: 1
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: FAULT
        multiplexer_indicator: Plain
        start_bit: 7
        size: 6
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 63
        unit: ""
        receivers:
          - XXX
      - name: MOTOR_ERR_L
        multiplexer_indicator: Plain
        start_bit: 15
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: MOTOR_ERR_R
        multiplexer_indicator: Plain
        start_bit: 23
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 771
    name: KNEE_DATA
    size: 4
    transmitter:
      NodeName: XXX
    signals:
      - name: MCU_TEMP
        multiplexer_indicator: Plain
        start_bit: 7
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 0.1
        offset: 0
        min: 0
        max: 125
        unit: ""
        receivers:
          - XXX
      - name: BATT_VOLTAGE
        multiplexer_indicator: Plain
        start_bit: 15
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 0.01
        offset: 0
        min: 0
        max: 60
        unit: ""
        receivers:
          - XXX
      - name: BATT_PERCENTAGE
        multiplexer_indicator: Plain
        start_bit: 31
        size: 7
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 100
        unit: ""
        receivers:
          - XXX
      - name: CHARGER_CONNECTED
        multiplexer_indicator: Plain
        start_bit: 24
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 772
    name: KNEE_MOTORS_CURRENT
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: LEFT_PHA_AB
        multiplexer_indicator: Plain
        start_bit: 7
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -32768
        max: 32767
        unit: ""
        receivers:
          - XXX
      - name: LEFT_PHA_BC
        multiplexer_indicator: Plain
        start_bit: 23
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -32768
        max: 32767
        unit: ""
        receivers:
          - XXX
      - name: RIGHT_PHA_AB
        multiplexer_indicator: Plain
        start_bit: 39
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -32768
        max: 32767
        unit: ""
        receivers:
          - XXX
      - name: RIGHT_PHA_BC
        multiplexer_indicator: Plain
        start_bit: 55
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -32768
        max: 32767
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 773
    name: KNEE_MOTORS_ANGLE
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: LEFT_ANGLE_SENSOR
        multiplexer_indicator: Plain
        start_bit: 7
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 16384
        unit: ""
        receivers:
          - XXX
      - name: RIGHT_ANGLE_SENSOR
        multiplexer_indicator: Plain
        start_bit: 23
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 16384
        unit: ""
        receivers:
          - XXX
      - name: LEFT_HALL_SENSOR
        multiplexer_indicator: Plain
        start_bit: 39
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 360
        unit: ""
        receivers:
          - XXX
      - name: RIGHT_HALL_SENSOR
        multiplexer_indicator: Plain
        start_bit: 55
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 360
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 848
    name: KNEE_TORQUE_CMD
    size: 6
    transmitter:
      NodeName: XXX
    signals:
      - name: TORQUE_L
        multiplexer_indicator: Plain
        start_bit: 7
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -1000
        max: 1000
        unit: ""
        receivers:
          - XXX
      - name: TORQUE_R
        multiplexer_indicator: Plain
        start_bit: 23
        size: 16
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: -1000
        max: 1000
        unit: ""
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 35
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 47
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 849
    name: KNEE_MAX_MOTOR_RPM_CMD
    size: 5
    transmitter:
      NodeName: XXX
    signals:
      - name: MAX_RPM_L
        multiplexer_indicator: Plain
        start_bit: 7
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1000
        unit: ""
        receivers:
          - XXX
      - name: MAX_RPM_R
        multiplexer_indicator: Plain
        start_bit: 23
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1000
        unit: ""
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 39
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
