tests/snapshots/opendbc/gm_global_a_chassis.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
nodes:
  - K182_PACM
  - K43_PSCM
  - K17_EBCM
  - NEO
  - K124_ASCM
messages:
  - id:
      Standard: 823
    name: PACMParkAssitCmd
    size: 7
    transmitter:
      NodeName: NEO
    signals:
      - name: RollingCounter
        multiplexer_indicator: Plain
        start_bit: 35
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 0
        unit: ""
        receivers:
          - NEO
      - name: SteeringWheelChecksum
        multiplexer_indicator: Plain
        start_bit: 47
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 0
        unit: ""
        receivers:
          - NEO
      - name: SteeringWheelCmd
        multiplexer_indicator: Plain
        start_bit: 23
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 0
        unit: ""
        receivers:
          - NEO
  - id:
      Standard: 560
    name: EBCMRegen
    size: 6
    transmitter:
      NodeName: K17_EBCM
    signals:
      - name: Regen
        multiplexer_indicator: Plain
        start_bit: 1
        size: 10
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 0
        unit: ""
        receivers:
          - NEO
  - id:
      Standard: 368
    name: EBCMFrictionBrakeStatus
    size: 8
    transmitter:
      NodeName: K17_EBCM
    signals:
      - name: FrictionBrakePressure
        multiplexer_indicator: Plain
        start_bit: 23
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 0
        unit: ""
        receivers:
          - NEO
  - id:
      Standard: 789
    name: EBCMFrictionBrakeCmd
    size: 5
    transmitter:
      NodeName: K17_EBCM
    signals:
      - name: RollingCounter
        multiplexer_indicator: Plain
        start_bit: 33
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 0
        unit: ""
        receivers:
          - NEO
      - name: FrictionBrakeMode
        multiplexer_indicator: Plain
        start_bit: 7
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 0
        unit: ""
        receivers:
          - NEO
      - name: FrictionBrakeChecksum
        multiplexer_indicator: Plain
        start_bit: 23
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 0
        unit: ""
        receivers:
          - NEO
      - name: FrictionBrakeCmd
        multiplexer_indicator: Plain
        start_bit: 3
        size: 12
        byte_order: BigEndian
        value_type: Signed
        factor: 1
        offset: 0
        min: 0
        max: 0
        unit: ""
        receivers:
          - NEO
message_transmitters:
  - message_id:
      Standard: 823
    transmitter:
      - NodeName: K43_PSCM
      - NodeName: NEO
  - message_id:
      Standard: 789
    transmitter:
      - NodeName: NEO
      - NodeName: K17_EBCM
comments:
  - Node:
      name: K182_PACM
      comment: Parking Assist Control Module
  - Node:
      name: K43_PSCM
      comment: Power Steering Control Module
  - Node:
      name: K17_EBCM
      comment: Electronic Brake Control Module
  - Node:
      name: NEO
      comment: Comma NEO
  - Node:
      name: K124_ASCM
      comment: Active Safety Control Module
attribute_definitions:
  - Plain: "\"UseGMParameterIDs\" INT 0 0"
  - Plain: "\"ProtocolType\" STRING"
  - Plain: "\"BusType\" STRING"
attribute_defaults:
  - name: UseGMParameterIDs
    value:
      Double: 1
  - name: ProtocolType
    value:
      String: GMLAN
  - name: BusType
    value:
      String: ""
attribute_values:
  - name: UseGMParameterIDs
    value:
      Raw:
        Double: 0
  - name: BusType
    value:
      Raw:
        String: CAN
  - name: ProtocolType
    value:
      Raw:
        String: GMLAN
